--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -26,6 +26,11 @@
 			// font-weight: 600;
 		}
 	}
+	.container {
+		max-width: 100%;
+		padding-left: 40px;
+		padding-right: 40px;
+	}
 }
 .burger {
 	height: 25px;
