--- a/app/scss/_general.scss
+++ b/app/scss/_general.scss
@@ -113,10 +113,16 @@ button, .btn {
 .hidden {
 	display: none !important;
 }
-.img_cover {
+.img-cover {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 	height: 100%;
 	width: 100%;
+}
+.general-link {
+	color: #AF8F72;
+	font-size: 16px;
+	font-weight: 700;
+	text-decoration: underline;
 }
