--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -9,7 +9,50 @@
 
 /* ≥992px */
 @include media-breakpoint-down(md) {
-
+    .header {
+        background:#fff;
+        z-index: 3;
+        // height: 80px;
+        // position: fixed;
+        // top: 0;
+        // left: 0;
+        // right: 0;
+        // color: #fff;
+        transition: all 0.3s ease;
+        box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+    }
+    .menu.active {
+        opacity: 1;
+        visibility: visible;
+    }
+    .menu {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 80px;
+        background: #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3 ease;
+    }
+    .burger {
+        display: block;
+    }
+    .header .menu li{
+        padding-top: 10px;
+        // padding-bottom: 10px;
+        // color: black;
+        // text-align: center;
+        margin-bottom: 10px;
+        margin-left: 0;
+        margin-right: 0 !important;
+        // padding-bottom: 10px;
+        // border-bottom: none;
+    }
 
 }
 
