--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -6,5 +6,6 @@
 @import "footer";
 @import "main";
 @import "angebot";
+@import "search-of-trial-missions";
 
 @import "media"; /* Always at the end*/
