--- a/app/scss/_search-of-trial-missions.scss
+++ b/app/scss/_search-of-trial-missions.scss
@@ -9,13 +9,13 @@
     &-container {
         padding-top: 100px;
         padding-bottom: 100px;
-        &:before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            border: 4px solid red;
-        }
+        // &:before {
+        //     content: '';
+        //     position: absolute;
+        //     top: 0;
+        //     left: 0;
+        //     border: 4px solid red;
+        // }
     }
     &-way {
         display: flex;
@@ -87,5 +87,12 @@
     }
     .container {
         margin-bottom: 0;
+    }
+}
+
+// coaching-job
+.coaching-job {
+    &-title {
+        max-width: 750px !important;
     }
 }
