--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -7,5 +7,7 @@
 @import "main";
 @import "angebot";
 @import "search-of-trial-missions";
+@import "job-search";
+@import "looking-job";
 
 @import "media"; /* Always at the end*/
