--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -9,5 +9,6 @@
 @import "search-of-trial-missions";
 @import "job-search";
 @import "looking-job";
+@import "for-companies";
 
 @import "media"; /* Always at the end*/
