--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -66,8 +66,115 @@
 	&-block-third {
 		background: url(../img/unter.png);
 	}
-}
 
+
+
+	// .swiper-button-next,
+	// .swiper-button-prev {
+	// 	position: absolute;
+	// 	top: 100%;
+	// 	transform: translate(0, -100%);
+	// 	color: #fff;
+	// }
+	// .swiper-button-prev {
+	// 	left: 90%;
+	// }
+	// .swiper-button-next {
+	// 	right: 3%;
+	// }
+	// .swiper-button-next:after,
+	// .swiper-button-prev:after {
+	// 	font-size: 16px;
+	// }
+
+
+
+	// .swiper-button-next,
+	// .swiper-button-prev {
+	// 	position: absolute;
+	// 	top: 100%;
+	// 	transform: translate(0, -100%);
+	// 	color: #fff;
+	// }
+	// .swiper-button-prev {
+	// 	left: 90%;
+	// }
+	// .swiper-button-next {
+	// 	right: 3%;
+	// }
+	// .swiper-button-next:after,
+	// .swiper-button-prev:after {
+	// 	font-size: 16px;
+	// }
+
+
+
+
+	.swiper-btn {
+		display: flex;
+		position: absolute;
+		top: 90%;
+		right: 5%;
+		color: #fff;
+		z-index: 1;
+		cursor: pointer;
+	}
+	.swiper-button-next {
+		margin-left: 10px;
+	}
+	.swiper-button-prev {
+		margin-right: 10px;
+	}
+	.test {
+		height: 30px;
+		width: 30px;
+		background: red;
+		margin-left: 20px;
+		font-size: 0;
+		z-index: 1;
+	}
+
+
+
+
+
+	// .swiper-pagination,
+	// .swiper-button-next,
+	// .swiper-button-prev {
+	// 	position: absolute;
+	// 	top: 85%;
+	// 	left: 95%;
+	// 	z-index: 1;
+	// 	transform: translate(-95%, -85%);
+	// 	color: #fff;
+	// }
+	// .swiper-button-next {
+	// 	left: 97%;
+	// 	transform: translate(-97%, -85%);
+	// }
+	// .swiper-button-prev {
+
+	// }
+}
+// .swiper-container {
+// 	width: 100%;
+// 	height: 100%;
+// }
+// .swiper-slide {
+// 	text-align: center;
+// 	font-size: 18px;
+// 	background: #fff;
+// 	/* Center slide text vertically */
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+// }
+// .swiper-slide img {
+// 	display: block;
+// 	width: 100%;
+// 	height: 100%;
+// 	object-fit: cover;
+// }
 // slick
 // .slick-dots {
 // 	display: flex;
