--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -53,8 +53,29 @@
 
 /* ≥768px */
 @include media-breakpoint-down(sm) {
-
-
+    .indent-col {
+        margin-bottom: 20px;
+    }
+    .description {
+        padding-bottom: 100px;
+    }
+    .home-btn {
+        width: 100%;
+    }
+    .reference-block h2 {
+        font-size: 28px;
+    }
+    .reference {
+        padding-bottom: 0;
+    }
+    .neurodiversity-item {
+        font-size: 32px;
+        line-height: 40px;
+    }
+    .current {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
 }
 
 /* ≥576px */
