--- a/app/scss/_for-companies.scss
+++ b/app/scss/_for-companies.scss
@@ -90,3 +90,13 @@
         margin-bottom: 60px;
     }
 }
+// our-network
+.our-network {
+    padding-top: 140px;
+    padding-bottom: 140px;
+    &-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
