--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -67,72 +67,74 @@
 		background: url(../img/unter.png);
 	}
 
-
-
-	// .swiper-button-next,
-	// .swiper-button-prev {
-	// 	position: absolute;
-	// 	top: 100%;
-	// 	transform: translate(0, -100%);
-	// 	color: #fff;
-	// }
-	// .swiper-button-prev {
-	// 	left: 90%;
-	// }
-	// .swiper-button-next {
-	// 	right: 3%;
-	// }
-	// .swiper-button-next:after,
-	// .swiper-button-prev:after {
-	// 	font-size: 16px;
-	// }
-
-
-
-	// .swiper-button-next,
-	// .swiper-button-prev {
-	// 	position: absolute;
-	// 	top: 100%;
-	// 	transform: translate(0, -100%);
-	// 	color: #fff;
-	// }
-	// .swiper-button-prev {
-	// 	left: 90%;
-	// }
-	// .swiper-button-next {
-	// 	right: 3%;
-	// }
-	// .swiper-button-next:after,
-	// .swiper-button-prev:after {
-	// 	font-size: 16px;
-	// }
-
-
-
-
-	.swiper-btn {
-		display: flex;
-		position: absolute;
-		top: 90%;
-		right: 5%;
+	.swiper-pagination  {
 		color: #fff;
-		z-index: 1;
-		cursor: pointer;
 	}
-	.swiper-button-next {
-		margin-left: 10px;
-	}
-	.swiper-button-prev {
-		margin-right: 10px;
-	}
-	.test {
-		height: 30px;
-		width: 30px;
-		background: red;
-		margin-left: 20px;
-		font-size: 0;
-		z-index: 1;
-	}
+
+	// .swiper-button-next,
+	// .swiper-button-prev {
+	// 	position: absolute;
+	// 	top: 100%;
+	// 	transform: translate(0, -100%);
+	// 	color: #fff;
+	// }
+	// .swiper-button-prev {
+	// 	left: 90%;
+	// }
+	// .swiper-button-next {
+	// 	right: 3%;
+	// }
+	// .swiper-button-next:after,
+	// .swiper-button-prev:after {
+	// 	font-size: 16px;
+	// }
+
+
+
+	// .swiper-button-next,
+	// .swiper-button-prev {
+	// 	position: absolute;
+	// 	top: 100%;
+	// 	transform: translate(0, -100%);
+	// 	color: #fff;
+	// }
+	// .swiper-button-prev {
+	// 	left: 90%;
+	// }
+	// .swiper-button-next {
+	// 	right: 3%;
+	// }
+	// .swiper-button-next:after,
+	// .swiper-button-prev:after {
+	// 	font-size: 16px;
+	// }
+
+
+
+
+	// .swiper-btn {
+	// 	display: flex;
+	// 	position: absolute;
+	// 	top: 90%;
+	// 	right: 5%;
+	// 	color: #fff;
+	// 	z-index: 1;
+	// 	cursor: pointer;
+	// }
+	// .swiper-button-next {
+	// 	margin-left: 10px;
+	// }
+	// .swiper-button-prev {
+	// 	margin-right: 10px;
+	// }
+	// .test {
+	// 	height: 30px;
+	// 	width: 30px;
+	// 	background: red;
+	// 	margin-left: 20px;
+	// 	font-size: 0;
+	// 	z-index: 1;
+	// }
 
 
 
