--- a/app/scss/_search-of-trial-missions.scss
+++ b/app/scss/_search-of-trial-missions.scss
@@ -49,7 +49,7 @@
         margin-right: 15px;
     }
     &-article {
-        margin-bottom: 0;
+        margin-bottom: 0 !important;
     }
     h1 {
         font-size: 35px;
