--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -10,5 +10,6 @@
 @import "job-search";
 @import "looking-job";
 @import "for-companies";
+@import "advanced-training";
 
 @import "media"; /* Always at the end*/
