--- a/app/scss/_general.scss
+++ b/app/scss/_general.scss
@@ -125,4 +125,23 @@ button, .btn {
 	font-size: 16px;
 	font-weight: 700;
 	text-decoration: underline;
+	&:hover {
+		color: #AF8F72;
+	}
+}
+.line-dec {
+	padding-top: 90px;
+	padding-bottom: 90px;
+	&-content {
+		margin-left: auto;
+		margin-right: auto;
+		width: 1px;
+		height: 150px;
+		background: $text_secondary;
+		// border: 1px solid #000000;
+		// transform: rotate(90deg);
+	}
+}
+.decoration {
+	height: 100px;
 }
