our-team content

--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -11,5 +11,6 @@
 @import "looking-job";
 @import "for-companies";
 @import "advanced-training";
+@import "about-us";
 
 @import "media"; /* Always at the end*/
