--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -12,5 +12,6 @@
 @import "for-companies";
 @import "advanced-training";
 @import "about-us";
+@import "current";
 
 @import "media"; /* Always at the end*/
