blog-article content

--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -13,5 +13,6 @@
 @import "advanced-training";
 @import "about-us";
 @import "current";
+@import "blog-article";
 
 @import "media"; /* Always at the end*/
