--- a/app/scss/_blog-article.scss
+++ b/app/scss/_blog-article.scss
@@ -10,6 +10,7 @@
     color: $text_secondary;
     font-size: 22px;
     width: 775px;
+    padding-bottom: 140px;
     h2 {
         font-weight: 700;
         font-size: 22px;
@@ -26,6 +27,37 @@
         border: 1px solid #000000;
         &:hover {
             color: $text_secondary;
+        }
+    }
+    &-block {
+        padding: 70px;
+        background: url(../img/unclem.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 100%;
+        width: 100%;
+        min-height: 440px;
+        color: #F0EDE9;
+        font-size: 22px;
+        font-weight: 400;
+        // margin-bottom: 100px;
+        h3 {
+            margin-bottom: 50px;
+        }
+        ul {
+            margin-left: 30px;
+        }
+        li {
+            list-style: disc;
+        }
+    }
+    &-arows {
+        display: flex;
+        justify-content: space-between;
+        &-right {
+            margin-right: 0;
+            margin-left: 25px;
         }
     }
 }
