job-description content

--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -15,5 +15,6 @@
 @import "current";
 @import "blog-article";
 @import "jobs";
+@import "job-description";
 
 @import "media"; /* Always at the end*/
