--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -16,5 +16,6 @@
 @import "blog-article";
 @import "jobs";
 @import "job-description";
+@import "contact";
 
 @import "media"; /* Always at the end*/
