--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -48,7 +48,15 @@
         margin-left: 0;
         margin-right: 0 !important;
     }
-
+    .current-content h2 {
+        font-size: 18px;
+    }
+    .current-content {
+        padding: 30px;
+    }
+    .angebot-block-title {
+        font-size: 22px;
+    }
 }
 
 /* ≥768px */
