--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -81,7 +81,113 @@
 	.swiper-pagination  {
 		color: #fff;
 	}
+	.swiper {
+		&-dots {
+			position: absolute;
+			left: 50%;
+			z-index: 1;
+			bottom: 5%;
+			color: #fff;
+			transform: translate(-50%, -5%);
+			display: flex;
+			cursor: pointer;
+		}
+		&-dot {
+			height: 13px;
+			width: 13px;
+			border: 1px solid #fff;
+			margin-right: 6px;
+			margin-left: 6px;
+			border-radius: 50%;
+			// background: #000;
+			// opacity: .2;
+			&:active {
+				// opacity: 1;
+				background: #fff;
+			}
+		}
+	}
+	// swiper top
+	.swiper-top {
+		position: absolute;
+		top: 95%;
+		left: 95%;
+		z-index: 1;
+		transform: translate(-95%, -95%);
+		display: flex;
+		align-items: baseline;
+	}
+	.swiper-button-next,
+	.swiper-button-prev {
+		position: initial;
+		// width: fit-content;
+		height: fit-content;
+	}
+	// // .swiper-pagination {
+	// // 	display: flex;
+	// // 	width: fit-content;
+	// // }
+	.swiper-button-next:after,
+	.swiper-button-prev:after {
+		font-size: 18px;
+		color: #fff;
+	}
+	.swiper-pagination {
+		position: initial;
+	}
+	.swiper-button-prev {
+		margin-right: 15px;
+	}
+	.swiper-button-next {
+		margin-left: 15px;
+	}
 
+
+	// .swiper-button-next:after,
+	// .swiper-container-rtl
+	// .swiper-button-prev:after {
+	// 	font-size: 18px;
+	// 	color: #fff;
+	// }
+	// .swiper-button-next {
+	// 	top: 100%;
+	// 	transform: translate(-95%, -100%);
+	// 	left: 95%;
+	// 	color: #fff;
+	// }
+	// .swiper-button-prev {
+	// 	top: 100%;
+	// 	transform: translate(-80%, -100%);
+	// 	left: 88%;
+	// 	color: #fff;
+	// }
+	// .swiper-pagination {
+	// 	width: fit-content;
+	// 	transform: translate(-92%, -93%);
+	// 	left: 92%;
+	// 	top: 93%;
+	// }
+	// .swiper-button-next:after,
+	// .swiper-button-prev:after {
+	// 	font-size: 15px;
+	// }
+	// .swiper-dot {
+	// 	height: 13px;
+	// 	width: 13px;
+	// 	border: 1px solid #fff;
+	// 	margin-right: 6px;
+	// 	margin-left: 6px;
+	// 	border-radius: 50%;
+	// }
+	// .swiper-dot-active {
+	// 	background: #fff;
+	// }
+	// .swiper-pagination-bullet-active
+
+
+	// .swiper-dit:active {
+	// 	background: #fff;
+	// }
 	// .swiper-button-next,
 	// .swiper-button-prev {
 	// 	position: absolute;
@@ -411,6 +517,7 @@
 .our-customers {
 	padding-top: 200px;
 	padding-bottom: 200px;
+	position: relative;
 	&-content {
 		padding: 70px;
 		background-image: url(../img/autimus.png);
@@ -440,5 +547,28 @@
 		max-width: 700px;
 		font-size: 24px;
 		line-height: 30px;
+	}
+	// .swiper-container-horizontal>
+	// .swiper-pagination-bullets,
+	// .swiper-pagination-custom,
+	// .swiper-pagination-fraction {
+	// 	// bottom: -35px;
+	// 	position: initial;
+	// 	margin-top: 30px;
+	// }
+	.swiper-pagination-bullet {
+		height: 15px;
+		width: 15px;
+		background: none;
+		border: 2px solid #AF8F72;
+		box-sizing: border-box;
+
+	}
+	.swiper-pagination-bullet-active {
+		background: #AF8F72;
+	}
+	.swiper-button-next,
+	.swiper-button-prev {
+		color: #AF8F72;
 	}
 }
