--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -50,7 +50,7 @@
 		position: absolute;
 		height: 4px;
 		width: 100%;
-		background: $text;
+		background: #AF8F72;
 		border-radius: 4px;
 		opacity: 1;
 		left: 0;
