--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -106,7 +106,8 @@
         width: 100%;
     }
     .reference-block h2,
-    .angebot-title {
+    .angebot-title,
+    .contact-us h3 {
         font-size: 28px;
     }
     .reference {
@@ -121,7 +122,8 @@
         padding-bottom: 50px;
     }
     .angebot-top,
-    .header .container {
+    .header .container,
+    .home {
         padding-left: 15px;
         padding-right: 15px;
     }
@@ -135,9 +137,9 @@
     .angebot-block-text {
         min-height: 0;
     }
-    .neurodiversity-item {
-        font-size: 26px;
-    }
+    // .neurodiversity-item {
+    //     font-size: 26px;
+    // }
     .search-missions-way {
         flex-wrap: wrap;
     }
@@ -190,7 +192,8 @@
     .search-missions-text {
         font-size: 16px;
     }
-    .search-missions-container {
+    .search-missions-container,
+    .neurodiversity {
         padding-bottom: 50px;
         padding-top: 50px;
     }
@@ -209,6 +212,29 @@
     }
     .search-missions-article {
         margin-bottom: 15px !important;
+    }
+    .home-text {
+        font-size: 32px;
+        line-height: 37px;
+    }
+    .home-title {
+        font-size: 20px;
+        margin-bottom: 5px !important;
+    }
+    .reference-block p,
+    .contact-us div {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+    .neurodiversity-text {
+        font-size: 18px;
+    }
+    .reference-block {
+        margin-bottom: 70px;
+    }
+    .contact-us {
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
 }
 
