--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -89,6 +89,13 @@
     .news-card {
         min-height: 502px;
     }
+    .our-customers-title {
+        line-height: 38px;
+        font-size: 28px;
+    }
+    .our-customers-content {
+        padding: 30px;
+    }
 }
 
 /* ≥768px */
