--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -14,6 +14,19 @@
     .reference {
         padding-bottom: 100px;
     }
+    .our-customers-mob,
+    .our-customers-mob-img {
+        display: none;
+    }
+    .reference-block h2 {
+        font-size: 26px;
+    }
+    .reference-left,
+    .reference-right {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
 
 /* ≥992px */
@@ -39,7 +52,7 @@
         left: 0;
         right: 0;
         top: 80px;
-        background: #fff;
+        background: $text_secondary;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -47,12 +60,13 @@
         opacity: 0;
         visibility: hidden;
         transition: all 0.3 ease;
+        height: 100%;
     }
     .burger {
         display: block;
     }
     .header .menu li {
-        // color: #DCD2C5;
+        color: #DCD2C5;
         padding-top: 10px;
         margin-bottom: 10px;
         margin-left: 0;
@@ -91,10 +105,7 @@
     }
     .our-customers-title {
         line-height: 38px;
-        font-size: 28px;
-    }
-    .our-customers-content {
-        padding: 30px;
+        font-size: 20px;
     }
 }
 
@@ -136,7 +147,7 @@
         padding-right: 15px;
     }
     .angebot-block-content {
-        text-align: center;
+        // text-align: center;
         margin-bottom: 50px;
     }
     .angebot-block-title {
@@ -202,8 +213,7 @@
     .search-missions-text {
         font-size: 16px;
     }
-    .search-missions-container,
-    .neurodiversity {
+    .search-missions-container {
         padding-bottom: 50px;
         padding-top: 50px;
     }
@@ -215,7 +225,7 @@
     }
     .our-customers {
         padding-top: 50px;
-        padding-bottom: 50px;
+        padding-bottom: 100px;
     }
     .jobs-content {
         padding-bottom: 70px;
@@ -246,6 +256,53 @@
         padding-top: 60px;
         padding-bottom: 60px;
     }
+    .our-customers-mob {
+        display: block;
+    }
+    .mob-title {
+        color: $text_secondary;
+        font-size: 20px;
+        line-height: 25px;
+        margin-bottom: 5px;
+    }
+    .mob-text {
+        color: #AF8F72;
+        font-size: 18px;
+    }
+    .our-customers-content {
+        // padding: 30px;
+        height: 148px;
+        padding: 0;
+    }
+    // .our-customers-swiper {
+    //     display: none;
+    // }
+    .our-customers
+    .swiper-button-next {
+        top: 98%;
+        right: 15%;
+    }
+    .our-customers
+    .swiper-button-prev{
+        top: 98%;
+        left: 15%;
+    }
+    .our-customers-content,
+    .our-customers .markus {
+        background-size: contain;
+    }
+    .our-customers-content,
+    .our-customers-swiper,
+    .footer-menu,
+    .home-btn-mob,
+    .neurodiversity-mob  {
+        display: none;
+    }
+    .our-customers-mob-img {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 
@@ -273,6 +330,10 @@
     .jobs-block h2 {
         font-size: 22px;
     }
+    .home-content {
+        justify-content: center;
+        padding: 20px;
+    }
 }
 
 /* ==========  Mobile First  ========== */
@@ -294,6 +355,9 @@
 
 /* ≤1200px */
 @include media-breakpoint-up(xl) {
-
+    .our-customers-mob,
+    .our-customers-mob-img {
+        display: none;
+    }
 }
 
