--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -15,7 +15,8 @@
         padding-bottom: 100px;
     }
     .our-customers-mob,
-    .our-customers-mob-img {
+    .our-customers-mob-img,
+    .our-team-img-mob {
         display: none;
     }
     .reference-block h2 {
@@ -97,9 +98,9 @@
     .news-title {
         font-size: 24px;
     }
-    .angebot-item {
-        font-size: 20px;
-    }
+    // .angebot-item {
+    //     font-size: 20px;
+    // }
     .news-card {
         min-height: 502px;
     }
@@ -136,15 +137,24 @@
         font-size: 32px;
         line-height: 40px;
     }
-    .current {
+    .current,
+    .angebot-top {
         padding-top: 50px;
         padding-bottom: 50px;
     }
     .angebot-top,
     .header .container,
-    .home {
+    .home,
+    .angebot-header {
         padding-left: 15px;
         padding-right: 15px;
+    }
+    .angebot-img {
+        height: 200px;
+        object-fit: cover;
+    }
+    .line-dec-content {
+        height: 80px;
     }
     .angebot-block-content {
         // text-align: center;
@@ -162,22 +172,23 @@
     //     font-size: 26px;
     // }
     .search-missions-way {
-        flex-wrap: wrap;
+       display: none;
     }
-    .search-missions-link {
-        margin-bottom: 8px;
-    }
+    // .search-missions-link {
+    //     margin-bottom: 8px;
+    // }
     .search-missions h1 {
-        font-size: 24px;
+        font-size: 32px;
         line-height: 36px;
+        margin-bottom: 20px;
     }
     .search-missions-link img {
         margin-left: 10px;
         margin-right: 10px;
     }
-    .search-missions-item {
-        flex-direction: column-reverse;
-    }
+    // .search-missions-item {
+    //     flex-direction: column-reverse;
+    // }
     .line-dec {
         padding-top: 50px;
         padding-bottom: 50px;
@@ -230,16 +241,16 @@
     .jobs-content {
         padding-bottom: 70px;
     }
-    .search-missions-article {
-        margin-bottom: 15px !important;
-    }
+    // .search-missions-article {
+    //     margin-bottom: 15px !important;
+    // }
     .home-text {
         font-size: 32px;
         line-height: 37px;
     }
     .home-title {
-        font-size: 20px;
-        margin-bottom: 5px !important;
+        font-size: 25px;
+        margin-bottom: 20px;
     }
     .reference-block p,
     .contact-us div {
@@ -256,7 +267,8 @@
         padding-top: 60px;
         padding-bottom: 60px;
     }
-    .our-customers-mob {
+    .our-customers-mob,
+    .our-team-img-mob {
         display: block;
     }
     .mob-title {
@@ -295,13 +307,22 @@
     .our-customers-swiper,
     .footer-menu,
     .home-btn-mob,
-    .neurodiversity-mob  {
+    .neurodiversity-mob,
+    .our-team-block-mob  {
         display: none;
     }
     .our-customers-mob-img {
         display: block;
         width: 100%;
         height: 100%;
+    }
+    .angebot-top-content {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .our-team-img-mob {
+        width: 100%;
+        margin-bottom: 10px;
     }
 }
 
@@ -334,6 +355,9 @@
         justify-content: center;
         padding: 20px;
     }
+    .angebot-item {
+        font-size: 18px;
+    }
 }
 
 /* ==========  Mobile First  ========== */
@@ -356,7 +380,8 @@
 /* ≤1200px */
 @include media-breakpoint-up(xl) {
     .our-customers-mob,
-    .our-customers-mob-img {
+    .our-customers-mob-img,
+    .our-team-img-mob {
         display: none;
     }
 }
