--- a/app/scss/_job-description.scss
+++ b/app/scss/_job-description.scss
@@ -14,4 +14,8 @@
             color: #af8f72;
         }
     }
+    &-container {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
 }
