--- a/app/scss/_jobs.scss
+++ b/app/scss/_jobs.scss
@@ -18,6 +18,10 @@
         top: 100%;
         transform: translate(-50%, -100%);
     }
+    &-page {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
     &-content {
         background: #F0EDE9;
         padding-top: 190px;
