--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -16,7 +16,8 @@
     }
     .our-customers-mob,
     .our-customers-mob-img,
-    .our-team-img-mob {
+    .our-team-img-mob,
+    .arrow-left-mob {
         display: none;
     }
     .reference-block h2 {
@@ -27,6 +28,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+    }
+    .news-card {
+        padding: 30px;
     }
 }
 
@@ -101,9 +105,6 @@
     // .angebot-item {
     //     font-size: 20px;
     // }
-    .news-card {
-        min-height: 502px;
-    }
     .our-customers-title {
         line-height: 38px;
         font-size: 20px;
@@ -122,7 +123,9 @@
     .about-us-link,
     .news-left,
     .news-right,
-    .contact {
+    .contact,
+    .news-left-block,
+    .news-right-block {
         width: 100%;
     }
     .reference-block h2,
@@ -130,7 +133,10 @@
     .contact-us h3 {
         font-size: 28px;
     }
-    .reference {
+    .reference,
+    .jobs-page,
+    .job-description-container,
+    .contact-map {
         padding-bottom: 0;
     }
     .neurodiversity-item {
@@ -145,7 +151,8 @@
     .angebot-top,
     .header .container,
     .home,
-    .angebot-header {
+    .angebot-header,
+    .jobs-page {
         padding-left: 15px;
         padding-right: 15px;
     }
@@ -239,7 +246,8 @@
         padding-bottom: 100px;
     }
     .jobs-content {
-        padding-bottom: 70px;
+        padding-bottom: 60px;
+        margin-bottom: 110px;
     }
     // .search-missions-article {
     //     margin-bottom: 15px !important;
@@ -257,7 +265,8 @@
         font-size: 18px;
         margin-bottom: 20px;
     }
-    .neurodiversity-text {
+    .neurodiversity-text,
+    .blog-article {
         font-size: 18px;
     }
     .reference-block {
@@ -268,7 +277,8 @@
         padding-bottom: 60px;
     }
     .our-customers-mob,
-    .our-team-img-mob {
+    .our-team-img-mob,
+    .arrow-left-mob {
         display: block;
     }
     .mob-title {
@@ -308,7 +318,8 @@
     .footer-menu,
     .home-btn-mob,
     .neurodiversity-mob,
-    .our-team-block-mob  {
+    .our-team-block-mob,
+    .contact-us-mob {
         display: none;
     }
     .our-customers-mob-img {
@@ -323,6 +334,13 @@
     .our-team-img-mob {
         width: 100%;
         margin-bottom: 10px;
+    }
+    .news-right {
+        padding: 20px;
+    }
+    .search-missions-back {
+        padding-top: 70px;
+        padding-bottom: 70px;
     }
 }
 
@@ -381,7 +399,8 @@
 @include media-breakpoint-up(xl) {
     .our-customers-mob,
     .our-customers-mob-img,
-    .our-team-img-mob {
+    .our-team-img-mob,
+    .arrow-left-mob {
         display: none;
     }
 }
