--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -107,7 +107,7 @@
 			border-radius: 50%;
 			// background: #000;
 			// opacity: .2;
-			&:active {
+			&.active {
 				// opacity: 1;
 				background: #fff;
 			}
