--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -5,6 +5,7 @@ $text: #333333;
 $text_secondary: #343434;
 
 $hover: #000000;
+$hover-btn: #AF8F72;
 
 /* Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"*/
 
