--- a/app/scss/_blog-article.scss
+++ b/app/scss/_blog-article.scss
@@ -1,9 +1,3 @@
-// MAIN
-.main {
-	flex: 1 0 auto;
-	overflow: hidden;
-    // padding-top: 80px;
-}
 // blog-article
 .blog-article {
     font-weight: 400;
@@ -26,7 +20,7 @@
         color: $text_secondary;
         border: 1px solid #000000;
         &:hover {
-            color: $text_secondary;
+            color: #fff;
         }
     }
     &-block {
