--- a/app/scss/_general.scss
+++ b/app/scss/_general.scss
@@ -1,3 +1,9 @@
+// MAIN
+.main {
+	flex: 1 0 auto;
+	overflow: hidden;
+    // padding-top: 80px;
+}
 ::-webkit-input-placeholder {
 	color: lighten($text, 25%);
 }
