--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -83,10 +83,10 @@
     .current-content {
         padding: 30px;
     }
-    .angebot-block-title {
+    .global-block-title {
         font-size: 21px;
     }
-    .angebot-text {
+    .global-text {
         font-size: 18px;
     }
     .our-team-right {
@@ -102,7 +102,7 @@
     .news-title {
         font-size: 24px;
     }
-    // .angebot-item {
+    // .global-item {
     //     font-size: 20px;
     // }
     .our-customers-title {
@@ -129,7 +129,7 @@
         width: 100%;
     }
     .reference-block h2,
-    .angebot-title,
+    .global-title,
     .contact-us h3 {
         font-size: 28px;
     }
@@ -144,57 +144,57 @@
         line-height: 40px;
     }
     .current,
-    .angebot-top {
+    .global-top {
         padding-top: 50px;
         padding-bottom: 50px;
     }
-    .angebot-top,
+    .global-top,
     .header .container,
     .home,
-    .angebot-header,
+    .global-header,
     .jobs-page {
         padding-left: 15px;
         padding-right: 15px;
     }
 
-    .angebot-img {
+    .global-img {
         height: 200px;
         object-fit: cover;
     }
     .line-dec-content {
         height: 80px;
     }
-    .angebot-block-content {
+    .global-block-content {
         // text-align: center;
         margin-bottom: 50px;
     }
-    .angebot-block-title {
+    .global-block-title {
         min-height: 0;
         margin-bottom: 10px;
     }
-    .angebot-block-text {
+    .global-block-text {
         min-height: 0;
         margin-bottom: 10px;
     }
     // .neurodiversity-item {
     //     font-size: 26px;
     // }
-    .search-missions-way {
+    .breadcrumbs-way {
        display: none;
     }
-    // .search-missions-link {
+    // .breadcrumbs-link {
     //     margin-bottom: 8px;
     // }
-    .search-missions h1 {
+    .breadcrumbs h1 {
         font-size: 32px;
         line-height: 36px;
         margin-bottom: 20px;
     }
-    .search-missions-link img {
+    .breadcrumbs-link img {
         margin-left: 10px;
         margin-right: 10px;
     }
-    // .search-missions-item {
+    // .breadcrumbs-item {
     //     flex-direction: column-reverse;
     // }
     .line-dec {
@@ -205,7 +205,7 @@
         padding-bottom: 70px;
     }
     .our-team,
-    .angebot-block {
+    .global-block {
         padding-bottom: 35px;
     }
     .footer-content {
@@ -229,10 +229,10 @@
     .blog-article {
         padding-bottom: 60px;
     }
-    .search-missions-text {
+    .breadcrumbs-text {
         font-size: 16px;
     }
-    .search-missions-container {
+    .breadcrumbs-container {
         padding-bottom: 50px;
         padding-top: 50px;
     }
@@ -250,7 +250,7 @@
         padding-bottom: 60px;
         // margin-bottom: 110px;
     }
-    // .search-missions-article {
+    // .breadcrumbs-article {
     //     margin-bottom: 15px !important;
     // }
     .home {
@@ -331,7 +331,7 @@
         width: 100%;
         height: 100%;
     }
-    .angebot-top-content {
+    .global-top-content {
         display: flex;
         flex-direction: column-reverse;
     }
@@ -342,7 +342,7 @@
     .news-right {
         padding: 20px;
     }
-    .search-missions-back {
+    .breadcrumbs-back {
         padding-top: 70px;
         padding-bottom: 70px;
     }
@@ -354,7 +354,7 @@
 
 }
 @media (max-width: 320px) {
-    .search-missions h1 {
+    .breadcrumbs h1 {
         font-size: 22px;
     }
     .contact-us h3 {
@@ -364,7 +364,7 @@
     .news-card {
         padding: 30px;
     }
-    .search-missions-text {
+    .breadcrumbs-text {
         font-size: 12px;
     }
     .blog-article-block {
@@ -377,7 +377,7 @@
         justify-content: center;
         padding: 20px;
     }
-    .angebot-item {
+    .global-item {
         font-size: 18px;
     }
 }
