fim img page current

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -109,6 +109,9 @@
         line-height: 38px;
         font-size: 20px;
     }
+    .news-img {
+        height: 250px;
+    }
 }
 
 /* ≥768px */
@@ -346,6 +349,10 @@
         padding-top: 70px;
         padding-bottom: 70px;
     }
+    // .news-block-img {
+    //     height: 100%;
+    //     min-height: auto;
+    // }
 }
 
 
