--- a/app/scss/_current.scss
+++ b/app/scss/_current.scss
@@ -18,12 +18,20 @@
             width: 50%;
         }
     }
-    &-block {
-        &-img {
-            height: auto;
-            min-height: 406px;
+    &-img {
+        height: 406px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
+    // &-block {
+    //     // &-img {
+    //     //     height: auto;
+    //     //     min-height: 406px;
+    //     // }
+    // }
     &-title {
         font-size: 30px;
         font-weight: 700;
