--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -4,9 +4,9 @@
 
 /* ≥1200px */
 @include media-breakpoint-down(lg) {
-    .our-team-block {
-        min-height: 525px;
-    }
+    // .our-team-block {
+    //     min-height: 525px;
+    // }
     .news-left-img {
         height: 100%;
         object-fit: cover;
